--- a/golu/package.json
+++ b/golu/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "push-and-deploy": "git add . && git commit -m \"update\" && git push origin main && npm run deploy"
   },
   "dependencies": {
     "react": "^19.1.1",
